enable borrowers to report lost items, and lenders to deal with them

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -60,6 +60,11 @@ $.ajaxSetup ({
 	</td>
       </tr>
       <tr>
+	<td>Lost </td>
+	<td>if your patron or your library has lost the item, or the lender marked it as "Shipped" but you never received it.<br/>When the lender confirms the "Lost" message, the request will be closed and moved to history.
+	</td>
+      </tr>
+      <tr>
 	<td>Close</td>
 	<td>if you have returned the book to the lender, but you get an Overdue notice because the lender has not marked it as ‘Checked in to ILS’
 	  An override message will be added to the request, and it will be closed and moved to history.
