--- a/templates/submenu_lend.tmpl
+++ b/templates/submenu_lend.tmpl
@@ -33,6 +33,12 @@
       </a>
     </li>
 
+    <li id="menu_lend_lost">
+      <a href="/cgi-bin/lightning.cgi?rm=lost">
+      Lost
+      </a>
+    </li>
+
     <li id="menu_lend_checkins">
       <a href="/cgi-bin/lightning.cgi?rm=checkins">
       Check-ins
