report on who we are lending to / who we are borrowing from

--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -38,6 +38,12 @@
 	Average times
       </a>
     </li>
+
+    <li id="menu_info_borrowers_lenders">
+      <a href="/cgi-bin/info.cgi?rm=info_borrowers_lenders_form">
+	Borrowers/Lenders
+      </a>
+    </li>
 <!--
     <li id="menu_info_feeds">
       <a href="/cgi-bin/info.cgi?rm=info_feeds_form">
