--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -168,7 +168,7 @@ $('document').ready(function(){
       <p>If you cannot remember your user name or password, please contact your local public library.</p>
 
     </div> <!--div class login-footer -->
-    <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
+    <input type="hidden" value="/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
     <input type="hidden" name="authen_oid" id="authen_oid" value="">
     <input type="hidden" value="authen_login" name="rm">
   </form>
