notice about URL change

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -74,7 +74,7 @@ $('document').ready(function() {
 <div id="main-left" class="tone-box" >
 
   <div class="alert-box" >
-    <p>Canada Post's Library Shipping Tool is currently unable to print return labels. They are aware of the issue and working to resolve it.</p>
+    <p>fILL's URL has changed:<br>&nbsp;<br><a href="https://fill.mb.libraries.coop/">https://fill.mb.libraries.coop/</a><br>&nbsp;<br>You'll need to update your web site links!</p>
   </div>
   <hr>
   <div id="zserver">
