admin testing of library authentication using library-supplied test patron

--- a/templates/admin/submenu_authentication.tmpl
+++ b/templates/admin/submenu_authentication.tmpl
@@ -8,6 +8,12 @@
       </a>
     </li>
 
+    <li id="menu_authentication_tests">
+      <a href="/cgi-bin/admin.cgi?rm=authentication_tests">
+      Tests
+      </a>
+    </li>
+
   </ul>
 </div>
 
