monthly board meeting report

--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -44,6 +44,12 @@
 	Borrowers/Lenders
       </a>
     </li>
+
+    <li id="menu_info_board_report">
+      <a href="/cgi-bin/info.cgi?rm=info_board_report_form">
+	Board report
+      </a>
+    </li>
 <!--
     <li id="menu_info_feeds">
       <a href="/cgi-bin/info.cgi?rm=info_feeds_form">
