--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -27,9 +27,9 @@
       </a>
     </li>
 -->
-    <li id="menu_info_reports">
+    <li id="menu_info_ill_stats">
       <a href="/cgi-bin/info.cgi?rm=info_new_reports_form">
-	Reports
+	ILL stats
       </a>
     </li>
 
