ability to change patron login page field labels on a per-library basis

--- a/templates/admin/authentication.tmpl
+++ b/templates/admin/authentication.tmpl
@@ -119,6 +119,26 @@
 	</fieldset>
       </div>
 
+      <div id="auth-labels" style="display:none">
+	<fieldset data-rol="controlgroup" data-type="horizontal">
+	  <legend>Text for patron login</legend>
+	  <table>
+	    <tr>
+	      <td>Instruction</td>
+	      <td><input id="login_text" name="login_text" type="text" size="45"></td>
+	    </tr>
+	    <tr>
+	      <td>Barcode label text</td>
+	      <td><input id="barcode_label_text" name="barcode_label_text" type="text" size="45"></td>
+	    </tr>
+	    <tr>
+	      <td>PIN label text</td>
+	      <td><input id="pin_label_text" name="pin_label_text" type="text" size="45"></td>
+	    </tr>
+	  </table>
+	</fieldset>
+      </div>
+
       <div id="form-buttons">
 	<input id="save-btn" type="button" class="library-style" value="Save changes" />
       </div>
