--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -121,16 +121,19 @@ $('document').ready(function(){
       </TMPL_IF>
 
       <div id="extAuth" style="display:none">
-	<p>Log in using your library barcode and PIN</p>
+	<!-- <p>Log in using your library barcode and PIN</p> -->
+	<p id="login_text"><TMPL_VAR name="login_text"></p>
         <div id="chooseLibrary" style="display:none">
 	  <div id="region">
 	  </div>
         </div>
 
 	<fieldset name="login">
-	  <label for="authen_barcode">Library card number</label>
+<!--	  <label for="authen_barcode">Library card number</label> -->
+	  <label for="authen_barcode"><TMPL_VAR name="barcode_label_text"></label>
 	  <input type="text" value="" size="15" name="authen_barcode" tabindex="1" id="authen_barcode"><br>
-          <label for="authen_pin">PIN number</label>
+<!--          <label for="authen_pin">PIN number</label> -->
+          <label for="authen_pin"><TMPL_VAR name="pin_label_text"></label>
           <input type="password" size="15" name="authen_pin" tabindex="2" id="authen_pin"><br>
         </fieldset>
 	
@@ -141,10 +144,14 @@ $('document').ready(function(){
       </div> <!-- div id extAuth -->
 
       <div id="fILLAuth" style="display:none">
-	<p>Log in using your fILL username and password</p>
-        <label for="authen_username">User Name</label>
+	<!-- Soon, there won't be any of these.... -->
+<!--	<p>Log in using your fILL username and password</p> -->
+	<p><TMPL_VAR name="login_text"></p>
+<!--        <label for="authen_username">User Name</label> -->
+        <label for="authen_username"><TMPL_VAR name="barcode_label_text"></label>
         <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
-        <label for="authen_password">Password</label>
+<!--        <label for="authen_password">Password</label> -->
+        <label for="authen_password"><TMPL_VAR name="pin_label_text"></label>
         <input type="password" name="authen_password" tabindex="2" id="authen_passwordfield" /><br>
       </div> <!-- div id fILLAuth -->
 
