--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -5,6 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"/>
   <link type="text/css" rel="stylesheet" href="/css/fILL-library-accessible.1.0.css"/>
