lenders list of overdue loans

--- a/templates/submenu_lend.tmpl
+++ b/templates/submenu_lend.tmpl
@@ -45,6 +45,12 @@
       </a>
     </li>
 
+    <li id="menu_lend_overdue">
+      <a href="/cgi-bin/lightning.cgi?rm=lend_overdue">
+      Overdue
+      </a>
+    </li>
+
   </ul>
 </div>
 
