this time for sure, Rocky!

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -106,7 +106,7 @@ $('document').ready(function() {
     <p><strong>Public fILL</strong></p>
     <ul>
       <li>Public fILL access: <a href="https://fill.mb.libraries.coop/"><span style="text-decoration: underline;">https://fill.mb.libraries.coop/</span></a></li>
-      <li><a href="/fILL-Patron_Guide.pdf">Patron brochure</a></li>
+      <li><a href="/fILL-Patron_Guide-v3.pdf">Patron brochure</a></li>
       <li><a href="/patrons-searching-tutorial.pdf">Patron tutorial on Searching and Requesting</a></li>
     </ul>
     
