CLA Library Shipping Tool discrepancy message on shipping page

--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -39,6 +39,12 @@ $.ajaxSetup ({
 	<div id="shippingtool">
 	  <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
 	</div>
+
+	<div style="border:5px solid red;">
+	  The CLA Library Shipping Tool has a discrepancy between the displayed amount and the printed amount.  It appears that the displayed amount is correct.<br/>
+	  CLA and Canada Post are aware of the issue and are working to fix the Shipping Tool.
+	</div>
+
   </div>
 
     <div id="mylistDiv"></div>
