--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -72,6 +72,14 @@ $('document').ready(function(){
         $.removeCookie("fILL-authentication", { path: '/' });
         window.location.href="?authen_logout=1";
     });
+
+    if (window.location.hostname == 'rigel.gotdns.org') {
+	$("#localdev").show();
+    }
+    if (window.location.hostname == 'fill-dev.mb.libraries.coop') {
+	$("#filldev").show();
+    }
+
 });
 </script>
 
@@ -139,6 +147,9 @@ $('document').ready(function(){
 </head>
 <body class="example_alt_pagination">
 
+  <div id="filldev"  style="display: none; background-color: #F62817; color: #FFFFFF">fILL development server</div>
+  <div id="localdev" style="display: none; background-color: #6CC417; color: #FFFFFF">fILL LOCAL development server</div>
+  
 <div id="container">
 <!--header template from public folder-->
 
