need the dev-server notice in patron search as well

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -149,6 +149,13 @@
         window.location.href="?authen_logout=1";
     });
 
+    if (window.location.hostname == 'rigel.gotdns.org') {
+	$("#localdev").show();
+    }
+    if (window.location.hostname == 'fill-dev.mb.libraries.coop') {
+	$("#filldev").show();
+    }
+
   });
 </script>
 
@@ -167,6 +174,9 @@
 
 <!-- from header.tmpl -->
 
+  <div id="filldev"  style="display: none; background-color: #F62817; color: #FFFFFF">fILL development server</div>
+  <div id="localdev" style="display: none; background-color: #6CC417; color: #FFFFFF">fILL LOCAL development server</div>
+  
 <div id="container"><!--closes in footer.tmp-->
 
   <!--***************ARIA MARKER 'BANNER'-search.tmpl-***************-->
